assets/css/styles.css
/* ... */
/* ======================= about  ====================================*/
.about__content .profile__pic {
  min-width: 200px;
  width: 15em;
  display: block;
  text-align: center;
}

.about--icon {
  font-size: var(--bigger-font-size);
  color: var(--theme-color-dark);
}
.text--emphasis {
  color: var(--theme-color);
  font-weight: var(--font-medium);
}
@media (min-width: 576px) { }
@media (min-width: 768px) { }
@media (min-width: 992px) { }
@media (min-width: 1200px) { }
/* ======================= skills  ====================================*/
.skills .skills__container {
  width: 100%;
}
.skills .skills__header {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-bottom: 2.5rem;
  cursor: pointer;
}

.skills .skills__icon {
  margin-right: 0.75em;
  font-size: var(--bigger-font-size);
  color: var(--theme-color-dark);
}

.skills .skills__title {
  font-size: var(--h3-font-size);
}

.skills .skills__subtitle {
  font-size: var(--small-font-size);
  color: var(--theme-color);
}

.skills .skills__list {
  padding: 0 2rem 2rem;
  transition: all ease-in-out 250ms;
}

.skills .skills__name {
  font-size: var(--small-font-size);
}

.skills .skills__number {
  font-size: var(--smaller-font-size);
  color: var(--theme-color);
}

.skills__arrow {
  margin-left: auto;
  transition: .4s;
  font-size: var(--biggest-font-size);
}

.skills__close .skills__list {
  display: none;
  overflow: hidden;
}

.skills__open .skills__list {
  display: block;
  margin-bottom: var(--mb-2-5);
}

.skills__open .skills__arrow {
  transform: rotate(180deg);
}



@media (min-width: 576px) { }
@media (min-width: 768px) { }
@media (min-width: 992px) {
  .skills .skills__name {
    font-size: var(--normal-font-size);
  }
  .skills .skills__number {
    font-size: var(--small-font-size);
  }
 }
@media (min-width: 1200px) { }

/* ======================= tools / jumbo ====================================*/
.tools {
  position: relative;
  /* background: linear-gradient(to bottom right, var(--container-color-alt2) -22%, var(--theme-color-light) 96%); */
  background: rgb(255,244,230);
  background: linear-gradient(166deg, rgba(255,244,230,1) 18%, rgba(245,214,171,1) 69%, rgba(208,174,128,1) 100%);
  
}

.tools .bg__layover {  
  /* background: radial-gradient(circle, rgba(255,244,230,1) 16%, rgba(245,214,171,1) 71%, rgba(221,179,121,1) 100%); */
  background: none;
  height: 100%;
  width: 100%;
}
.tools .content__frame {
  background: none;
}

.jumbo--pad {
  padding-top: 15em;
  padding-bottom: 15em;
}

.tools .grid {
  width: 80%;
  display: grid;
  grid-template-rows: 1fr 1fr;
  row-gap: 1.2rem;
}

.tools .tools__logo {
  width: 56px;
  border-radius: .25rem;
  opacity: 1; 
  -webkit-transition: all 360ms ease;	
  -moz-transition: all 360ms ease; 
  transition: all 360ms ease;   
  filter: contrast(100%); 
  -webkit-filter: contrast(100%); 
  filter: sepia(100%); 
  -webkit-filter: sepia(100%);
}

.tools .tools__logo:hover {
  filter: saturate(140%); 
  -webkit-filter: saturate(140%); 
  filter: contrast(110%); 
  -webkit-filter: contrast(110%); 
  /* background-color: rgba(139,65,54,0.125); */
  background-color: rgba(245, 214, 171,0.5);
  box-shadow: 1px 1px 3px 1px var(--theme-color-dark);
}

.tool__caption {
  /* position: absolute; */
  text-align: center;
  color: var(--text-color);
  /* bottom: 0; */
}
.tool__caption .name {
  font-weight: var(--font-semi-bold);
  color: var(--theme-color)
}

.tool__caption .info,
.tool__caption .tool__class {
  font-size: var(--smaller-font-size);
}

.tool__caption .tool__class {
  /* font-style: italic; */
  margin-bottom: 0;
}

@media (min-width: 576px) { }
@media (min-width: 768px) { }
@media (min-width: 992px) { 
  .tools .tools__logo {
    width: 64px;
  }
}
@media (min-width: 1200px) { }
@media (min-width: 1600px) {
  .tools {
    background-image: url('../img/bg/cofee-mug.png');
    background-attachment: fixed;
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center center;
  }
  .tools .bg__layover {  
    /* reduce opacity */
    background: radial-gradient(circle, rgba(255,244,230,0.90) 16%, rgba(245,214,171,0.90) 71%, rgba(221,179,121,0.90) 100%);
    /* background: radial-gradient(circle, rgba(255,244,230,0.50) 16%, rgba(245,214,171,0.50) 71%, rgba(221,179,121,0.50) 100%); */

  }
}

/*========================== modal  ====================================*/
.modal-header {
  display: block;
}

.modal-title {
  color: var(--theme-color-dark);
}

.modal-footer .btn {
  background-color: var(--theme-color-dark);
  color: var(--theme-color-light);
}
/*========================== projects ====================================*/

.projects__list .card {
  border-style: none;
  margin-bottom: 2rem;
  height: 100%;
}

.projects__list .card:hover {
  box-shadow: -1px 1px 7px var(--theme-color-dark);
}

.projects__list .card-title {
  color: var(--theme-color-dark);
  font-weight: var(--font-medium);
  font-size: larger;
  margin-top: 1rem;
  margin-bottom: 1rem;;
}

.projects__list .card img {
  border: 1px solid #ddd;
}

.projects__list .card-text  {
  padding-left: 0.25rem;
  padding-right: 0.25rem;
}

.projects__list .card .contribution {
  display: inline-block;
  font-size: var(--smaller-font-size);
  color: var(--theme-color-dark);
  margin-left: 0.75em;
}

.projects__list .card-link {
  color: var(--theme-color);
  cursor: pointer;
}

.projects__list .card-link:hover {
  text-decoration: underline;
}

@media (min-width: 576px) {}
@media (min-width: 768px) {}
@media (min-width: 992px) {}
@media (min-width: 1200px) {}


/* ======================= contact ====================================*/
.contact {
background: rgb(245,214,171);
background: linear-gradient(196deg, rgba(245,214,171,1) 9%, rgba(255,244,230,1) 44%, rgba(246,217,179,1) 80%);
}

.contact .content__frame {
  padding-bottom: 4rem;
}

.contact .container {
  display: grid;
  gap: 2rem;
}
/* ... */

